--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@ngrx/store": "^13.1.0",
+    "ag-grid-angular": "^27.2.1",
+    "ag-grid-community": "^27.2.1",
     "bootstrap": "^5.1.3",
     "e2e": "^0.0.8",
     "rxjs": "~7.5.0",
