--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngrx/store": "^13.1.0",
     "ag-grid-angular": "^27.2.1",
     "ag-grid-community": "^27.2.1",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "e2e": "^0.0.8",
     "rxjs": "~7.5.0",
